Make source and build compatible with Java 8 through Java 25
Source changes (Java 8 compatible alternatives):
- Thread.threadId() → Thread.getId() (available since Java 1.5)
- List.copyOf() → Collections.unmodifiableList(new ArrayList<>())
- --add-modules flags now conditional on JDK version at runtime

Build changes (JDK-activated Maven profiles):
- jdk8 profile: adds tools.jar to classpath for com.sun.jdi access
- jdk9+ profile: adds --add-modules flags for compiler and javadoc
- Removed --add-modules from default compiler config
- Fixed javadoc plugin: removed <source>8</source> that conflicted
  with --add-modules on Java 25

https://claude.ai/code/session_01UHzJZuUdL5vpz2QML1dc1f